activity和fragment基类处理透明状态栏 业务toast成功或失败公共方法

--- a/UIFrameworkLib/src/main/res/values-en/pingia_ui_strings.xml
+++ b/UIFrameworkLib/src/main/res/values-en/pingia_ui_strings.xml
@@ -9,4 +9,7 @@
     <string name="load_fail">Loading failed, click to reload</string>
     <string name="loading">Loading...</string>
     <string name="no_record">No data</string>
+
+    <string name="do_biz_suc">%sSuccess</string>
+    <string name="do_biz_fail">%sFailure, reason :%s</string>
 </resources>
